docs/api/qiskit/0.19/qiskit.aqua.operators.state_fns.OperatorStateFn.mdx
---
title: OperatorStateFn (v0.19)
description: API reference for qiskit.aqua.operators.state_fns.OperatorStateFn in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.operators.state_fns.OperatorStateFn
---

# OperatorStateFn

<Class id="qiskit.aqua.operators.state_fns.OperatorStateFn" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/operators/state_fns/operator_state_fn.py" signature="OperatorStateFn(primitive=None, coeff=1.0, is_measurement=False)" modifiers="class">
  A class for state functions and measurements which are defined by a density Operator, stored using an `OperatorBase`.

  **Parameters**

  *   **primitive** (`Optional`\[[`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")]) – The `OperatorBase` which defines the behavior of the underlying State function.
  *   **coeff** (`Union`\[`int`, `float`, `complex`, [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")]) – A coefficient by which to multiply the state function
  *   **is\_measurement** (`bool`) – Whether the StateFn is a measurement operator

  ## Attributes

  <span id="operatorstatefn-coeff" />

  ### coeff

  <Attribute id="qiskit.aqua.operators.state_fns.OperatorStateFn.coeff" attributeTypeHint="Union[int, float, complex, qiskit.circuit.parameterexpression.ParameterExpression]">
    A coefficient by which the state function is multiplied.

    **Return type**

    `Union`\[`int`, `float`, `complex`, [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")]
  </Attribute>

  <span id="operatorstatefn-is-measurement" />

  ### is\_measurement

  <Attribute id="qiskit.aqua.operators.state_fns.OperatorStateFn.is_measurement" attributeTypeHint="bool">
    Whether the StateFn object is a measurement Operator.

    **Return type**

    `bool`
  </Attribute>

  <span id="operatorstatefn-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.aqua.operators.state_fns.OperatorStateFn.num_qubits" attributeTypeHint="int">
    The number of qubits over which the Operator is defined. If `op.num_qubits == 5`, then `op.eval('1' * 5)` will be valid, but `op.eval('11')` will not.

    **Return type**

    `int`

    **Returns**

    The number of qubits accepted by the Operator’s underlying function.
  </Attribute>

  <span id="operatorstatefn-primitive" />

  ### primitive

  <Attribute id="qiskit.aqua.operators.state_fns.OperatorStateFn.primitive">
    The primitive which defines the behavior of the underlying State function.
  </Attribute>

  ## Methods

  <span id="operatorstatefn-mul" />

  ### \_\_mul\_\_

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.__mul__" signature="OperatorStateFn.__mul__(other)">
    Overload `*` for Operator scalar multiplication.

    **Parameters**

    **other** (`Number`) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to product of self and scalar.
  </Function>

  <span id="operatorstatefn-add" />

  ### add

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.add" signature="OperatorStateFn.add(other)">
    Return Operator addition of self and other, overloaded by `+`.

    **Parameters**

    **other** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to the sum of self and other.
  </Function>

  <span id="operatorstatefn-adjoint" />

  ### adjoint

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.adjoint" signature="OperatorStateFn.adjoint()">
    Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`. For StateFns, this also turns the StateFn into a measurement.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to the adjoint of self.
  </Function>

  <span id="operatorstatefn-assign-parameters" />

  ### assign\_parameters

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.assign_parameters" signature="OperatorStateFn.assign_parameters(param_dict)">
    Binds scalar values to any Terra `Parameters` in the coefficients or primitives of the Operator, or substitutes one `Parameter` for another. This method differs from Terra’s `assign_parameters` in that it also supports lists of values to assign for a give `Parameter`, in which case self will be copied for each parameterization in the binding list(s), and all the copies will be returned in an `OpList`. If lists of parameterizations are used, every `Parameter` in the param\_dict must have the same length list of parameterizations.

    **Parameters**

    **param\_dict** (`dict`) – The dictionary of `Parameters` to replace, and values or lists of values by which to replace them.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    The `OperatorBase` with the `Parameters` in self replaced by the values or `Parameters` in param\_dict. If param\_dict contains parameterization lists, this `OperatorBase` is an `OpList`.
  </Function>

  <span id="operatorstatefn-bind-parameters" />

  ### bind\_parameters

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.bind_parameters" signature="OperatorStateFn.bind_parameters(param_dict)">
    Same as assign\_parameters, but maintained for consistency with QuantumCircuit in Terra (which has both assign\_parameters and bind\_parameters).

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")
  </Function>

  <span id="operatorstatefn-compose" />

  ### compose

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.compose" signature="OperatorStateFn.compose(other)">
    Composition (Linear algebra-style: A\@B(x) = A(B(x))) is not well defined for states in the binary function model, but is well defined for measurements.

    **Parameters**

    **other** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – The Operator to compose with self.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An Operator equivalent to the function composition of self and other.

    **Raises**

    **ValueError** – If self is not a measurement, it cannot be composed from the right.
  </Function>

  <span id="operatorstatefn-equals" />

  ### equals

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.equals" signature="OperatorStateFn.equals(other)">
    Evaluate Equality between Operators, overloaded by `==`. Only returns True if self and other are of the same representation (e.g. a DictStateFn and CircuitStateFn will never be equal, even if their vector representations are equal), their underlying primitives are equal (this means for ListOps, OperatorStateFns, or EvolvedOps the equality is evaluated recursively downwards), and their coefficients are equal.

    **Parameters**

    **other** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – The `OperatorBase` to compare to self.

    **Return type**

    `bool`

    **Returns**

    A bool equal to the equality of self and other.
  </Function>

  <span id="operatorstatefn-eval" />

  ### eval

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.eval" signature="OperatorStateFn.eval(front=None)">
    Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

    **Parameters**

    **front** (`Union`\[`str`, `dict`, `ndarray`, [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase"), `None`]) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function.

    **Return type**

    `Union`\[[`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase"), `float`, `complex`]

    **Returns**

    The output of the Operator’s evaluation function. If self is a `StateFn`, the result is a float or complex. If self is an Operator (`PrimitiveOp, ComposedOp, SummedOp, EvolvedOp,` etc.), the result is a StateFn. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.
  </Function>

  <span id="operatorstatefn-mul" />

  ### mul

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.mul" signature="OperatorStateFn.mul(scalar)">
    Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`).

    **Parameters**

    **scalar** (`Union`\[`int`, `float`, `complex`, [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")]) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to product of self and scalar.
  </Function>

  <span id="operatorstatefn-neg" />

  ### neg

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.neg" signature="OperatorStateFn.neg()">
    Return the Operator’s negation, effectively just multiplying by -1.0, overloaded by `-`.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to the negation of self.
  </Function>

  <span id="operatorstatefn-power" />

  ### power

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.power" signature="OperatorStateFn.power(exponent)">
    Compose with Self Multiple Times, undefined for StateFns.

    **Parameters**

    **exponent** (`int`) – The number of times to compose self with self.

    **Raises**

    **ValueError** – This function is not defined for StateFns.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")
  </Function>

  <span id="operatorstatefn-primitive-strings" />

  ### primitive\_strings

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.primitive_strings" signature="OperatorStateFn.primitive_strings()">
    Return a set of strings describing the primitives contained in the Operator. For example, `{'QuantumCircuit', 'Pauli'}`. For hierarchical Operators, such as `ListOps`, this can help illuminate the primitives represented in the various recursive levels, and therefore which conversions can be applied.

    **Return type**

    `Set`\[`str`]

    **Returns**

    A set of strings describing the primitives contained within the Operator.
  </Function>

  <span id="operatorstatefn-reduce" />

  ### reduce

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.reduce" signature="OperatorStateFn.reduce()">
    Try collapsing the Operator structure, usually after some type of conversion, e.g. trying to add Operators in a SummedOp or delete needless IGates in a CircuitOp. If no reduction is available, just returns self.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    The reduced `OperatorBase`.
  </Function>

  <span id="operatorstatefn-sample" />

  ### sample

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.sample" signature="OperatorStateFn.sample(shots=1024, massive=False, reverse_endianness=False)">
    Sample the state function as a normalized probability distribution. Returns dict of bitstrings in order of probability, with values being probability.

    **Parameters**

    *   **shots** (`int`) – The number of samples to take to approximate the State function.
    *   **massive** (`bool`) – Whether to allow large conversions, e.g. creating a matrix representing over 16 qubits.
    *   **reverse\_endianness** (`bool`) – Whether to reverse the endianness of the bitstrings in the return dict to match Terra’s big-endianness.

    **Return type**

    `dict`

    **Returns**

    A dict containing pairs sampled strings from the State function and sampling frequency divided by shots.
  </Function>

  <span id="operatorstatefn-tensor" />

  ### tensor

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.tensor" signature="OperatorStateFn.tensor(other)">
    Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, Plus.tensor(Zero) produces a |+⟩ on qubit 0 and a |0⟩ on qubit 1, or |+⟩⨂|0⟩, but would produce a QuantumCircuit like

    > |0⟩– |+⟩–

    Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

    **Parameters**

    **other** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – The `OperatorBase` to tensor product with self.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to the tensor product of self and other.
  </Function>

  <span id="operatorstatefn-tensorpower" />

  ### tensorpower

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.tensorpower" signature="OperatorStateFn.tensorpower(other)">
    Return tensor product with self multiple times, overloaded by `^`.

    **Parameters**

    **other** (`int`) – The int number of times to tensor product self with itself via `tensorpower`.

    **Return type**

    `Union`\[[`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase"), `int`]

    **Returns**

    An `OperatorBase` equivalent to the tensorpower of self by other.
  </Function>

  <span id="operatorstatefn-to-circuit-op" />

  ### to\_circuit\_op

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.to_circuit_op" signature="OperatorStateFn.to_circuit_op()">
    Return `StateFnCircuit` corresponding to this StateFn. Ignore for now because this is undefined. TODO maybe call to\_pauli\_op and diagonalize here, but that could be very inefficient, e.g. splitting one Stabilizer measurement into hundreds of 1 qubit Paulis.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")
  </Function>

  <span id="operatorstatefn-to-density-matrix" />

  ### to\_density\_matrix

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.to_density_matrix" signature="OperatorStateFn.to_density_matrix(massive=False)">
    Return numpy matrix of density operator, warn if more than 16 qubits to force the user to set massive=True if they want such a large matrix. Generally big methods like this should require the use of a converter, but in this case a convenience method for quick hacking and access to classical tools is appropriate.

    **Return type**

    `ndarray`
  </Function>

  <span id="operatorstatefn-to-legacy-op" />

  ### to\_legacy\_op

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.to_legacy_op" signature="OperatorStateFn.to_legacy_op(massive=False)">
    Attempt to return the Legacy Operator representation of the Operator. If self is a `SummedOp` of `PauliOps`, will attempt to convert to `WeightedPauliOperator`, and otherwise will simply convert to `MatrixOp` and then to `MatrixOperator`. The Legacy Operators cannot represent `StateFns` or proper `ListOps` (meaning not one of the `ListOp` subclasses), so an error will be thrown if this method is called on such an Operator. Also, Legacy Operators cannot represent unbound Parameter coeffs, so an error will be thrown if any are present in self.

    Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Return type**

    [`LegacyBaseOperator`](qiskit.aqua.operators.legacy.LegacyBaseOperator "qiskit.aqua.operators.legacy.base_operator.LegacyBaseOperator")

    **Returns**

    The `LegacyBaseOperator` representing this Operator.

    **Raises**

    **TypeError** – self is an Operator which cannot be represented by a `LegacyBaseOperator`, such as `StateFn`, proper (non-subclass) `ListOp`, or an Operator with an unbound coeff Parameter.
  </Function>

  <span id="operatorstatefn-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.to_matrix" signature="OperatorStateFn.to_matrix(massive=False)">
    Note: this does not return a density matrix, it returns a classical matrix containing the quantum or classical vector representing the evaluation of the state function on each binary basis state. Do not assume this is is a normalized quantum or classical probability vector. If we allowed this to return a density matrix, then we would need to change the definition of composition to be \~Op @ StateFn @ Op for those cases, whereas by this methodology we can ensure that composition always means Op @ StateFn.

    Return numpy vector of state vector, warn if more than 16 qubits to force the user to set massive=True if they want such a large vector.

    **Parameters**

    **massive** (`bool`) – Whether to allow large conversions, e.g. creating a matrix representing over 16 qubits.

    **Returns**

    Vector of state vector

    **Return type**

    np.ndarray

    **Raises**

    **ValueError** – Invalid parameters.
  </Function>

  <span id="operatorstatefn-to-matrix-op" />

  ### to\_matrix\_op

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.to_matrix_op" signature="OperatorStateFn.to_matrix_op(massive=False)">
    Return a MatrixOp for this operator.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")
  </Function>

  <span id="operatorstatefn-traverse" />

  ### traverse

  <Function id="qiskit.aqua.operators.state_fns.OperatorStateFn.traverse" signature="OperatorStateFn.traverse(convert_fn, coeff=None)">
    Apply the convert\_fn to the internal primitive if the primitive is an Operator (as in the case of `OperatorStateFn`). Otherwise do nothing. Used by converters.

    **Parameters**

    *   **convert\_fn** (`Callable`) – The function to apply to the internal OperatorBase.
    *   **coeff** (`Union`\[`int`, `float`, `complex`, [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression"), `None`]) – A coefficient to multiply by after applying convert\_fn.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    The converted StateFn.
  </Function>
</Class>

